# apps/api/docs/swagger.json
@@ -40,14 +40,14 @@
           "WorkspaceRoleMember"
         ]
       },
-      "model.ErrorBody": {
+      "httpx.ErrorBody": {
         "properties": {
           "code": {
             "type": "string"
           },
           "fields": {
             "items": {
-              "$ref": "#/components/schemas/model.FieldError"
+              "$ref": "#/components/schemas/httpx.FieldError"
             },
             "type": "array",
             "uniqueItems": false
@@ -58,18 +58,18 @@
         },
         "type": "object"
       },
-      "model.ErrorResponse": {
+      "httpx.ErrorResponse": {
         "properties": {
           "error": {
-            "$ref": "#/components/schemas/model.ErrorBody"
+            "$ref": "#/components/schemas/httpx.ErrorBody"
           },
           "meta": {
-            "$ref": "#/components/schemas/model.Meta"
+            "$ref": "#/components/schemas/httpx.Meta"
           }
         },
         "type": "object"
       },
-      "model.FieldError": {
+      "httpx.FieldError": {
         "properties": {
           "field": {
             "type": "string"
@@ -80,7 +80,7 @@
         },
         "type": "object"
       },
-      "model.Meta": {
+      "httpx.Meta": {
         "properties": {
           "cursor": {
             "type": "string"
@@ -94,13 +94,13 @@
         },
         "type": "object"
       },
-      "model.WebResponse-core_AuthenticatedUser": {
+      "httpx.WebResponse-core_AuthenticatedUser": {
         "properties": {
           "data": {
             "$ref": "#/components/schemas/core.AuthenticatedUser"
           },
           "meta": {
-            "$ref": "#/components/schemas/model.Meta"
+            "$ref": "#/components/schemas/httpx.Meta"
           }
         },
         "type": "object"
@@ -142,7 +142,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/model.WebResponse-core_AuthenticatedUser"
+                  "$ref": "#/components/schemas/httpx.WebResponse-core_AuthenticatedUser"
                 }
               }
             },
@@ -152,7 +152,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/model.ErrorResponse"
+                  "$ref": "#/components/schemas/httpx.ErrorResponse"
                 }
               }
             },
