# apps/api/internal/platform/httpx/helper.go
@@ -1,4 +1,4 @@
-package http
+package httpx
 
 import (
 	"time"
@@ -7,7 +7,6 @@ import (
 	"github.com/gofiber/fiber/v3/middleware/requestid"
 	"github.com/google/uuid"
 	"github.com/paroki/domus/api/internal/core"
-	"github.com/paroki/domus/api/internal/model"
 )
 
 func GetID(c fiber.Ctx) (*uuid.UUID, error) {
@@ -23,8 +22,8 @@ func GetID(c fiber.Ctx) (*uuid.UUID, error) {
 	return &id, nil
 }
 
-func NewMeta(c fiber.Ctx, cursor string) model.Meta {
-	return model.Meta{
+func NewMeta(c fiber.Ctx, cursor string) Meta {
+	return Meta{
 		RequestID: requestid.FromContext(c),
 		Timestamp: time.Now(),
 		Cursor:    cursor,
@@ -32,14 +31,14 @@ func NewMeta(c fiber.Ctx, cursor string) model.Meta {
 }
 
 func Success[T any](c fiber.Ctx, status int, data T) error {
-	return c.Status(status).JSON(model.WebResponse[T]{
+	return c.Status(status).JSON(WebResponse[T]{
 		Data: data,
 		Meta: NewMeta(c, ""),
 	})
 }
 
 func WithCursor[T any](c fiber.Ctx, data T, cursor string) error {
-	return c.Status(fiber.StatusOK).JSON(model.WebResponse[T]{
+	return c.Status(fiber.StatusOK).JSON(WebResponse[T]{
 		Data: data,
 		Meta: NewMeta(c, cursor),
 	})
